--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,24 @@
-hello
+
+<style>
+  h1{
+    background-color:aquamarine;
+  }
+</style>
+
+<h1>Sample Flexbox Example</h1>
+
+<section>
+  <article>
+    <h1>First Article</h1>
+    <p>Officia non tempor in sit sit.</p>
+  </article>
+
+  <article>
+    <h2>Second Article</h2>
+    <p>Nostrud do in eiusmod mollit consectetur.</p>
+  </article>
+  
+  <article>
+    <h3>Third Article</h3>
+    <p>Nostrud do in eiusmod mollit consectetur.</p>
+  </article>
