--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,24 +1,20 @@
 
-<style>
-  h1{
-    background-color:aquamarine;
-  }
-</style>
-
-<h1>Sample Flexbox Example</h1>
+<header>
+  <h1>Sample Flexbox Example</h1>
+</header>
 
 <section>
   <article>
-    <h1>First Article</h1>
-    <p>Officia non tempor in sit sit.</p>
+    <h2>First Article</h2>
+    <p>Eu commodo magna occaecat exercitation ipsum. Excepteur eiusmod sint minim ipsum est duis sint. Excepteur dolore amet ea excepteur deserunt labore labore ut proident duis enim. Sit voluptate tempor cillum in in exercitation laborum ad duis ullamco ut quis nisi. Incididunt nostrud laborum exercitation eiusmod officia est. Excepteur qui sint laboris occaecat id minim et reprehenderit incididunt do excepteur. Irure aliquip nostrud ad Lorem.</p>
   </article>
 
   <article>
-    <h2>Second Article</h2>
-    <p>Nostrud do in eiusmod mollit consectetur.</p>
+    <h3>Second Article</h3>
+    <p>Quis reprehenderit nisi nulla deserunt nostrud eiusmod. Ea minim Lorem exercitation enim veniam aute consectetur. Exercitation ea cillum id aute cupidatat incididunt reprehenderit nostrud cillum sunt veniam. Consequat amet nulla dolor elit elit velit culpa occaecat elit dolore ea quis laborum quis. Eiusmod consectetur aliqua aliquip excepteur elit nulla laboris nulla aute ea veniam.</p>
   </article>
   
   <article>
-    <h3>Third Article</h3>
-    <p>Nostrud do in eiusmod mollit consectetur.</p>
+    <h4>Third Article</h4>
+    <p>Adipisicing deserunt commodo non magna sint sit dolor elit aliquip laborum Lorem. Ex nisi consectetur quis mollit et velit sunt nisi cillum consectetur ea est. Do esse sint id minim proident excepteur qui nulla tempor pariatur magna eu. Ut in reprehenderit laboris pariatur consequat proident ut tempor consectetur cillum reprehenderit tempor. Reprehenderit dolore et ea ex dolor.</p>
   </article>
